--- a/index.html
+++ b/index.html
@@ -1,1 +1,120 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Winter Arc — Wapp</title><link rel="stylesheet" href="assets/css/style.min.css"></head><body><div class="bg-wrap"><img class="bg-img" src="assets/images/background.jpeg" alt="background"><canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas><div class="noise"></div><div class="ghost">WTR</div></div><header class="site-header"><div class="brand"><div class="badge">$WTR</div><div class="brand-title">Winter Arc</div></div><nav class="nav"><a class="nav-link" href="#about">About</a><a class="nav-link" href="#tokenomics">Tokenomics</a><a class="nav-cta" href="prereg.html">Pre-Register</a></nav></header><main><section class="hero"><div class="hero-inner"><h1 class="hero-title">Winter Arc</h1><p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p><div class="hero-actions"><a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a></div></div></section><section id="about" class="panel"><div class="panel-inner"><h2 class="panel-title">What is Winter Arc?</h2><p class="panel-text">Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.</p></div></section><section id="tokenomics" class="panel alt"><div class="panel-inner tokenomics"><h2 class="panel-title">Tokenomics</h2><div class="tokenomics-grid"><div class="stat"><span class="number" data-target="1000000000">0</span><span class="label">Total Supply</span></div><div class="stat"><span class="number" data-target="70">0</span><span class="label">% Liquidity</span></div><div class="stat"><span class="number" data-target="20">0</span><span class="label">% Community</span></div><div class="stat"><span class="number" data-target="10">0</span><span class="label">% Dev Locked</span></div></div></div></section><section id="vision" class="panel"><div class="panel-inner vision"><h2 class="panel-title">Vision</h2><div class="vision-content"><p class="panel-text">Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.</p><div class="vision-art"></div></div></div></section><section class="principles panel"><div class="panel-inner"><h2 class="panel-title">Principles</h2><div class="principles-grid"><div class="principle"><h4>Authenticity</h4><p>Real tasks, real proof, real progression.</p></div><div class="principle"><h4>Merit</h4><p>Rewards are based on difficulty, consistency and community validation.</p></div><div class="principle"><h4>Community</h4><p>Shared challenges, leaderboards, seasonal events.</p></div></div></div></section></main><footer class="site-footer"><div class="footer-inner"><div>© 2025 Winter Arc</div><div class="links"><a href="https://t.me/wtrcoin" target="_blank">Telegram</a><a href="https://x.com/wtr_coin" target="_blank">X</a><a href="https://instagram.com/winteriscomingson" target="_blank">Instagram</a></div></div></footer><script src="assets/js/main.min.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Winter Arc — Wapp</title>
+  <link rel="stylesheet" href="assets/css/style.min.css">
+</head>
+<body>
+  <div class="bg-wrap">
+    <img class="bg-img" src="assets/images/background.jpeg" alt="background">
+    <canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas>
+    <div class="noise"></div>
+    <div class="ghost">WTR</div>
+  </div>
+
+  <header class="site-header">
+    <div class="brand">
+      <div class="badge">$WTR</div>
+      <div class="brand-title">Winter Arc</div>
+    </div>
+    <nav class="nav">
+      <a class="nav-link" href="#about">About</a>
+      <a class="nav-link" href="#tokenomics">Tokenomics</a>
+      <a class="nav-cta" href="prereg.html">Pre-Register</a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="hero-inner">
+        <h1 class="hero-title">Winter Arc</h1>
+        <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
+        <div class="hero-actions">
+          <a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="panel">
+      <div class="panel-inner">
+        <h2 class="panel-title">What is Winter Arc?</h2>
+        <p class="panel-text">
+          Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.
+        </p>
+      </div>
+    </section>
+
+    <!-- NEW TOKENOMICS -->
+    <section id="tokenomics" class="panel alt">
+      <div class="panel-inner tokenomics">
+        <h2 class="panel-title">Tokenomics</h2>
+        <div class="token-card interactive" data-tilt>
+          <div class="token-stats">
+            <div class="stat-big">
+              <span class="number" data-target="1000000000">0</span>
+              <span class="label">Total Supply</span>
+            </div>
+            <div class="stat-row">
+              <div class="stat-glow">🌊 70% Liquidity</div>
+              <div class="stat-glow">🤝 20% Community</div>
+              <div class="stat-glow">🔒 10% Dev Locked</div>
+            </div>
+          </div>
+          <p class="token-desc">
+            $WTR powers the entire Winter Arc ecosystem: staking, rewards and seasonal unlocks.  
+            Dev tokens are locked. Liquidity secured. Community-first economy.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- END TOKENOMICS -->
+
+    <section id="vision" class="panel">
+      <div class="panel-inner vision">
+        <h2 class="panel-title">Vision</h2>
+        <div class="vision-content">
+          <p class="panel-text">
+            Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.
+          </p>
+          <div class="vision-art"></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="principles panel">
+      <div class="panel-inner">
+        <h2 class="panel-title">Principles</h2>
+        <div class="principles-grid">
+          <div class="principle">
+            <h4>Authenticity</h4>
+            <p>Real tasks, real proof, real progression.</p>
+          </div>
+          <div class="principle">
+            <h4>Merit</h4>
+            <p>Rewards are based on difficulty, consistency and community validation.</p>
+          </div>
+          <div class="principle">
+            <h4>Community</h4>
+            <p>Shared challenges, leaderboards, seasonal events.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <div>© 2025 Winter Arc</div>
+      <div class="links">
+        <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
+        <a href="https://x.com/wtr_coin" target="_blank">X</a>
+        <a href="https://instagram.com/winteriscomingson" target="_blank">Instagram</a>
+      </div>
+    </div>
+  </footer>
+
+  <script src="assets/js/main.min.js"></script>
+</body>
+</html>
