--- a/index.html
+++ b/index.html
@@ -21,70 +21,96 @@
       <div class="brand-title">Winter Arc</div>
     </div>
     <nav class="nav">
-      <a href="#about">About</a>
-      <a href="#tokenomics">Tokenomics</a>
+      <a class="nav-link" href="#about">About</a>
+      <a class="nav-link" href="#tokenomics">Tokenomics</a>
       <a class="nav-cta" href="prereg.html">Pre-Register</a>
     </nav>
   </header>
 
   <main>
     <section class="hero">
-      <h1>Winter Arc</h1>
-      <p>Survive the arc. Earn $WTR. Level up your reality.</p>
-      <a class="btn-primary" href="prereg.html">Enter Pre-Registration</a>
+      <div class="hero-inner">
+        <h1 class="hero-title">Winter Arc</h1>
+        <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
+        <div class="hero-actions">
+          <a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a>
+        </div>
+      </div>
     </section>
 
     <section id="about" class="panel">
-      <h2>What is Winter Arc?</h2>
-      <p>
-        Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion.
-      </p>
-    </section>
-
-    <section id="tokenomics" class="panel alt">
-      <h2>Tokenomics</h2>
-      <div class="token-card">
-        <div class="token-stats">
-          <div class="stat-big">
-            <span class="number" data-target="1000000000">0</span>
-            <span>Total Supply</span>
-          </div>
-          <div class="stat-row">
-            <span>🌊 70% Liquidity</span>
-            <span>🤝 20% Community</span>
-            <span>🔒 10% Dev Locked</span>
-          </div>
-        </div>
-        <p>
-          $WTR powers the Winter Arc ecosystem: staking, rewards and seasonal unlocks.  
-          Dev tokens are locked. Liquidity secured. Community-first economy.
+      <div class="panel-inner">
+        <h2 class="panel-title">What is Winter Arc?</h2>
+        <p class="panel-text">
+          Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.
         </p>
       </div>
     </section>
 
+    <section id="tokenomics" class="panel alt">
+      <div class="panel-inner tokenomics">
+        <h2 class="panel-title">Tokenomics</h2>
+        <div class="token-card interactive" data-tilt>
+          <div class="token-stats">
+            <div class="stat-big">
+              <span class="number" data-target="1000000000">0</span>
+              <span class="label">Total Supply</span>
+            </div>
+            <div class="stat-row">
+              <div class="stat-glow">🌊 70% Liquidity</div>
+              <div class="stat-glow">🤝 20% Community</div>
+              <div class="stat-glow">🔒 10% Dev Locked</div>
+            </div>
+          </div>
+          <p class="token-desc">
+            $WTR powers the entire Winter Arc ecosystem: staking, rewards and seasonal unlocks.  
+            Dev tokens are locked. Liquidity secured. Community-first economy.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <section id="vision" class="panel">
-      <h2>Vision</h2>
-      <p>
-        Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up, earn progression and unlock seasonal drops.
-      </p>
+      <div class="panel-inner vision">
+        <h2 class="panel-title">Vision</h2>
+        <div class="vision-content">
+          <p class="panel-text">
+            Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.
+          </p>
+          <div class="vision-art"></div>
+        </div>
+      </div>
     </section>
 
     <section class="principles panel">
-      <h2>Principles</h2>
-      <div class="principles-grid">
-        <div><h4>Authenticity</h4><p>Real tasks, real proof, real progression.</p></div>
-        <div><h4>Merit</h4><p>Rewards based on consistency and community validation.</p></div>
-        <div><h4>Community</h4><p>Shared challenges, leaderboards, seasonal events.</p></div>
+      <div class="panel-inner">
+        <h2 class="panel-title">Principles</h2>
+        <div class="principles-grid">
+          <div class="principle">
+            <h4>Authenticity</h4>
+            <p>Real tasks, real proof, real progression.</p>
+          </div>
+          <div class="principle">
+            <h4>Merit</h4>
+            <p>Rewards are based on difficulty, consistency and community validation.</p>
+          </div>
+          <div class="principle">
+            <h4>Community</h4>
+            <p>Shared challenges, leaderboards, seasonal events.</p>
+          </div>
+        </div>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div>© 2025 Winter Arc</div>
-    <div class="links">
-      <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
-      <a href="https://x.com/wtr_coin" target="_blank">X</a>
-      <a href="https://instagram.com/winteriscomingson" target="_blank">Instagram</a>
+    <div class="footer-inner">
+      <div>© 2025 Winter Arc</div>
+      <div class="links">
+        <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
+        <a href="https://x.com/wtr_coin" target="_blank">X</a>
+        <a href="https://instagram.com/winteriscomingson" target="_blank">Instagram</a>
+      </div>
     </div>
   </footer>
 
