--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
     <nav class="nav">
       <a class="nav-link" href="#about">About</a>
+      <a class="nav-link" href="#tokenomics">Tokenomics</a>
       <a class="nav-cta" href="prereg.html">Pre-Register</a>
     </nav>
   </header>
@@ -36,10 +37,49 @@
       </div>
     </section>
 
-    <section id="coming-soon" class="panel">
-      <div class="panel-inner coming-soon-inner">
-        <h2 class="panel-title">Coming Soon</h2>
-        <p class="panel-text">Winter Arc app and $WTR token are on their way. Stay tuned for updates!</p>
+    <section id="about" class="panel">
+      <div class="panel-inner">
+        <h2 class="panel-title">What is Winter Arc?</h2>
+        <p class="panel-text">
+          Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.
+        </p>
+      </div>
+    </section>
+
+    <!-- NEW TOKENOMICS -->
+    <section id="tokenomics" class="panel alt">
+      <div class="panel-inner tokenomics">
+        <h2 class="panel-title">Tokenomics</h2>
+        <div class="token-card interactive" data-tilt>
+          <div class="token-stats">
+            <div class="stat-big">
+              <span class="number" data-target="1000000000">0</span>
+              <span class="label">Total Supply</span>
+            </div>
+            <div class="stat-row">
+              <div class="stat-glow">🌊 70% Liquidity</div>
+              <div class="stat-glow">🤝 20% Community</div>
+              <div class="stat-glow">🔒 10% Dev Locked</div>
+            </div>
+          </div>
+          <p class="token-desc">
+            $WTR powers the entire Winter Arc ecosystem: staking, rewards and seasonal unlocks.  
+            Dev tokens are locked. Liquidity secured. Community-first economy.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- END TOKENOMICS -->
+
+    <section id="vision" class="panel">
+      <div class="panel-inner vision">
+        <h2 class="panel-title">Vision</h2>
+        <div class="vision-content">
+          <p class="panel-text">
+            Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.
+          </p>
+          <div class="vision-art"></div>
+        </div>
       </div>
     </section>
 
