--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
   </div>
 
   <header class="site-header">
-    <div class="brand">
-      <div class="badge">$WTR</div>
+    <div class="brand-center">
+      <div class="brand-title shine">Winter Arc</div>
     </div>
     <nav class="nav">
-      <a class="nav-link" href="#about">About</a>
-      <a class="nav-cta" href="prereg.html">Pre-Register</a>
+      <a href="https://t.me/wtrcoin" target="_blank" class="nav-link">Telegram</a>
+      <a href="https://x.com/wtr_coin" target="_blank" class="nav-link">X</a>
     </nav>
   </header>
 
   <main>
     <section class="hero">
-      <div class="hero-inner hero-center">
-        <h1 class="hero-title shine">Winter Arc</h1>
+      <div class="hero-inner">
+        <h1 class="hero-title">Winter Arc</h1>
         <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
         <div class="hero-actions">
           <a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a>
