--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <img class="bg-img" src="assets/images/background.jpeg" alt="background">
   <canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas>
   <div class="noise"></div>
-  <div class="ghost">COMING SOON</div>
+  <div class="ghost">WTR</div>
 </div>
 
 <header class="site-header">
@@ -39,10 +39,8 @@
 
   <section id="about" class="panel">
     <div class="panel-inner">
-      <h2 class="panel-title">What is Winter Arc?</h2>
-      <p class="panel-text">
-        Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.
-      </p>
+      <h2 class="panel-title">Coming Soon</h2>
+      <p class="panel-text">Winter Arc is launching soon — prepare for radical challenges, progression, and rewards!</p>
     </div>
   </section>
 
@@ -50,10 +48,22 @@
     <div class="panel-inner tokenomics">
       <h2 class="panel-title">Tokenomics</h2>
       <div class="tokenomics-grid">
-        <div class="stat"><span class="number" data-target="1000000000">0</span><span class="label">Total Supply</span></div>
-        <div class="stat"><span class="number" data-target="70">0</span><span class="label">% Liquidity</span></div>
-        <div class="stat"><span class="number" data-target="20">0</span><span class="label">% Community</span></div>
-        <div class="stat"><span class="number" data-target="10">0</span><span class="label">% Dev Locked</span></div>
+        <div class="stat">
+          <span class="number" data-target="1000000000">0</span>
+          <span class="label">Total Supply</span>
+        </div>
+        <div class="stat">
+          <span class="number" data-target="70">0</span>
+          <span class="label">% Liquidity</span>
+        </div>
+        <div class="stat">
+          <span class="number" data-target="20">0</span>
+          <span class="label">% Community</span>
+        </div>
+        <div class="stat">
+          <span class="number" data-target="10">0</span>
+          <span class="label">% Dev Locked</span>
+        </div>
       </div>
     </div>
   </section>
@@ -62,9 +72,7 @@
     <div class="panel-inner vision">
       <h2 class="panel-title">Vision</h2>
       <div class="vision-content">
-        <p class="panel-text">
-          Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.
-        </p>
+        <p class="panel-text">Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.</p>
         <div class="vision-art"></div>
       </div>
     </div>
@@ -74,9 +82,18 @@
     <div class="panel-inner">
       <h2 class="panel-title">Principles</h2>
       <div class="principles-grid">
-        <div class="principle"><h4>Authenticity</h4><p>Real tasks, real proof, real progression.</p></div>
-        <div class="principle"><h4>Merit</h4><p>Rewards are based on difficulty, consistency and community validation.</p></div>
-        <div class="principle"><h4>Community</h4><p>Shared challenges, leaderboards, seasonal events.</p></div>
+        <div class="principle">
+          <h4>Authenticity</h4>
+          <p>Real tasks, real proof, real progression.</p>
+        </div>
+        <div class="principle">
+          <h4>Merit</h4>
+          <p>Rewards are based on difficulty, consistency and community validation.</p>
+        </div>
+        <div class="principle">
+          <h4>Community</h4>
+          <p>Shared challenges, leaderboards, seasonal events.</p>
+        </div>
       </div>
     </div>
   </section>
