--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Winter Arc — Wapp</title>
-<link rel="stylesheet" href="assets/css/style.min.css">
+<link rel="stylesheet" href="assets/css/style.min.css"/>
+<link rel="icon" href="assets/images/favicon.png" type="image/png"/>
 </head>
 <body>
 <div class="bg-wrap">
@@ -16,7 +17,7 @@
 
 <header class="site-header">
   <div class="brand">
-    <div class="badge">$WTR</div>
+    <img src="assets/images/logo.png" alt="Winter Arc Logo" class="brand-logo"/>
     <div class="brand-title">Winter Arc</div>
   </div>
   <nav class="nav">
@@ -40,7 +41,7 @@
   <section id="about" class="panel">
     <div class="panel-inner">
       <h2 class="panel-title">Coming Soon</h2>
-      <p class="panel-text">Winter Arc is launching soon — prepare for radical challenges, progression, and rewards!</p>
+      <p class="panel-text">Winter Arc — an activity-driven app where real-world challenges earn you $WTR tokens. Stay tuned!</p>
     </div>
   </section>
 
@@ -72,8 +73,10 @@
     <div class="panel-inner vision">
       <h2 class="panel-title">Vision</h2>
       <div class="vision-content">
-        <p class="panel-text">Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.</p>
-        <div class="vision-art"></div>
+        <p class="panel-text">
+          Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.
+        </p>
+        <div class="vision-art mobile-visible"></div>
       </div>
     </div>
   </section>
