--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Winter Arc — Wapp</title>
-<link rel="stylesheet" href="assets/css/style.min.css"/>
-<link rel="icon" href="assets/images/favicon.png" type="image/png"/>
+<link rel="icon" type="image/png" href="assets/images/favicon.png"/>
+<link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
 <div class="bg-wrap">
@@ -17,6 +17,8 @@
 
 <header class="site-header">
   <div class="brand">
+    <img src="assets/images/logo.png" alt="Winter Arc Logo" style="height:36px; border-radius:6px;"/>
+    <div class="badge">$WTR</div>
     <div class="brand-title">Winter Arc</div>
   </div>
   <nav class="nav">
@@ -27,78 +29,69 @@
 </header>
 
 <main>
-  <section class="hero">
-    <div class="hero-inner">
-      <h1 class="hero-title">Winter Arc</h1>
-      <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
-      <div class="hero-actions">
-        <a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a>
+<section class="hero">
+  <div class="hero-inner">
+    <h1 class="hero-title">Winter Arc</h1>
+    <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
+    <div class="hero-actions">
+      <a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a>
+    </div>
+  </div>
+</section>
+
+<section id="about" class="panel">
+  <div class="panel-inner">
+    <h2 class="panel-title">Coming Soon</h2>
+    <p class="panel-text">Winter Arc is on its way. Prepare for a revolutionary experience of challenges, rewards, and $WTR token integration.</p>
+  </div>
+</section>
+
+<section id="tokenomics" class="panel alt">
+  <div class="panel-inner tokenomics">
+    <h2 class="panel-title">Tokenomics</h2>
+    <div class="tokenomics-grid">
+      <div class="stat">
+        <span class="number" data-target="1000000000">0</span>
+        <span class="label">Total Supply</span>
+      </div>
+      <div class="stat">
+        <span class="number" data-target="70">0</span>
+        <span class="label">% Liquidity</span>
+      </div>
+      <div class="stat">
+        <span class="number" data-target="20">0</span>
+        <span class="label">% Community</span>
+      </div>
+      <div class="stat">
+        <span class="number" data-target="10">0</span>
+        <span class="label">% Dev Locked</span>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section id="about" class="panel">
-    <div class="panel-inner">
-      <h2 class="panel-title">Coming Soon</h2>
-      <p class="panel-text">Winter Arc — an activity-driven app where real-world challenges earn you $WTR tokens. Stay tuned!</p>
+<section id="vision" class="panel">
+  <div class="panel-inner vision">
+    <h2 class="panel-title">Vision</h2>
+    <div class="vision-content">
+      <p class="panel-text">
+        Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards, and community. Complete Arcs, level up your profile, earn real progression, and unlock seasonal drops. $WTR fuels the economy, staking, and rewards.
+      </p>
+      <div class="vision-art"></div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section id="tokenomics" class="panel alt">
-    <div class="panel-inner tokenomics">
-      <h2 class="panel-title">Tokenomics</h2>
-      <div class="tokenomics-grid">
-        <div class="stat">
-          <span class="number" data-target="1000000000">0</span>
-          <span class="label">Total Supply</span>
-        </div>
-        <div class="stat">
-          <span class="number" data-target="70">0</span>
-          <span class="label">% Liquidity</span>
-        </div>
-        <div class="stat">
-          <span class="number" data-target="20">0</span>
-          <span class="label">% Community</span>
-        </div>
-        <div class="stat">
-          <span class="number" data-target="10">0</span>
-          <span class="label">% Dev Locked</span>
-        </div>
-      </div>
+<section class="principles panel">
+  <div class="panel-inner">
+    <h2 class="panel-title">Principles</h2>
+    <div class="principles-grid">
+      <div class="principle"><h4>Authenticity</h4><p>Real tasks, real proof, real progression.</p></div>
+      <div class="principle"><h4>Merit</h4><p>Rewards are based on difficulty, consistency and community validation.</p></div>
+      <div class="principle"><h4>Community</h4><p>Shared challenges, leaderboards, seasonal events.</p></div>
     </div>
-  </section>
-
-  <section id="vision" class="panel">
-    <div class="panel-inner vision">
-      <h2 class="panel-title">Vision</h2>
-      <div class="vision-content">
-        <p class="panel-text">
-          Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.
-        </p>
-        <div class="vision-art mobile-visible"></div>
-      </div>
-    </div>
-  </section>
-
-  <section class="principles panel">
-    <div class="panel-inner">
-      <h2 class="panel-title">Principles</h2>
-      <div class="principles-grid">
-        <div class="principle">
-          <h4>Authenticity</h4>
-          <p>Real tasks, real proof, real progression.</p>
-        </div>
-        <div class="principle">
-          <h4>Merit</h4>
-          <p>Rewards are based on difficulty, consistency and community validation.</p>
-        </div>
-        <div class="principle">
-          <h4>Community</h4>
-          <p>Shared challenges, leaderboards, seasonal events.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+  </div>
+</section>
 </main>
 
 <footer class="site-footer">
