--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Winter Arc — Wapp</title>
-<link rel="stylesheet" href="assets/css/style.min.css">
+<link rel="stylesheet" href="assets/css/style.min.css"/>
 </head>
 <body>
 <div class="bg-wrap">
@@ -39,8 +39,8 @@
 
   <section id="about" class="panel">
     <div class="panel-inner">
-      <h2 class="panel-title">Coming Soon</h2>
-      <p class="panel-text">Winter Arc is launching soon — prepare for radical challenges, progression, and rewards!</p>
+      <h2 class="panel-title">What is Winter Arc?</h2>
+      <p class="panel-text">Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.</p>
     </div>
   </section>
 
@@ -48,22 +48,10 @@
     <div class="panel-inner tokenomics">
       <h2 class="panel-title">Tokenomics</h2>
       <div class="tokenomics-grid">
-        <div class="stat">
-          <span class="number" data-target="1000000000">0</span>
-          <span class="label">Total Supply</span>
-        </div>
-        <div class="stat">
-          <span class="number" data-target="70">0</span>
-          <span class="label">% Liquidity</span>
-        </div>
-        <div class="stat">
-          <span class="number" data-target="20">0</span>
-          <span class="label">% Community</span>
-        </div>
-        <div class="stat">
-          <span class="number" data-target="10">0</span>
-          <span class="label">% Dev Locked</span>
-        </div>
+        <div class="stat"><span class="number" data-target="1000000000">0</span><span class="label">Total Supply</span></div>
+        <div class="stat"><span class="number" data-target="70">0</span><span class="label">% Liquidity</span></div>
+        <div class="stat"><span class="number" data-target="20">0</span><span class="label">% Community</span></div>
+        <div class="stat"><span class="number" data-target="10">0</span><span class="label">% Dev Locked</span></div>
       </div>
     </div>
   </section>
@@ -82,18 +70,9 @@
     <div class="panel-inner">
       <h2 class="panel-title">Principles</h2>
       <div class="principles-grid">
-        <div class="principle">
-          <h4>Authenticity</h4>
-          <p>Real tasks, real proof, real progression.</p>
-        </div>
-        <div class="principle">
-          <h4>Merit</h4>
-          <p>Rewards are based on difficulty, consistency and community validation.</p>
-        </div>
-        <div class="principle">
-          <h4>Community</h4>
-          <p>Shared challenges, leaderboards, seasonal events.</p>
-        </div>
+        <div class="principle"><h4>Authenticity</h4><p>Real tasks, real proof, real progression.</p></div>
+        <div class="principle"><h4>Merit</h4><p>Rewards are based on difficulty, consistency and community validation.</p></div>
+        <div class="principle"><h4>Community</h4><p>Shared challenges, leaderboards, seasonal events.</p></div>
       </div>
     </div>
   </section>
