--- a/index.html
+++ b/index.html
@@ -4,43 +4,38 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Winter Arc — Wapp</title>
-<link rel="stylesheet" href="assets/css/style.min.css"/>
+<link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body>
 <div class="bg-wrap">
   <img class="bg-img" src="assets/images/background.jpeg" alt="background">
   <canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas>
   <div class="noise"></div>
-  <div class="ghost">WTR</div>
+  <div class="ghost">COMING SOON</div>
 </div>
-
 <header class="site-header">
-  <div class="brand">
-    <div class="badge">$WTR</div>
-    <div class="brand-title">Winter Arc</div>
-  </div>
+  <div class="brand"><div class="badge">$WTR</div><div class="brand-title">Winter Arc</div></div>
   <nav class="nav">
     <a class="nav-link" href="#about">About</a>
     <a class="nav-link" href="#tokenomics">Tokenomics</a>
+    <a class="nav-link" href="#vision">Vision</a>
+    <a class="nav-link" href="#roadmap">Roadmap</a>
     <a class="nav-cta" href="prereg.html">Pre-Register</a>
   </nav>
 </header>
-
 <main>
   <section class="hero">
     <div class="hero-inner">
       <h1 class="hero-title">Winter Arc</h1>
       <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
-      <div class="hero-actions">
-        <a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a>
-      </div>
+      <div class="hero-actions"><a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a></div>
     </div>
   </section>
 
   <section id="about" class="panel">
     <div class="panel-inner">
       <h2 class="panel-title">What is Winter Arc?</h2>
-      <p class="panel-text">Winter Arc is an activity-driven application where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track your profile, timeline, levels and claim tokens in-app.</p>
+      <p class="panel-text">Winter Arc is an activity-driven app where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track profile, timeline, levels, and claim tokens in-app. Challenge yourself, earn, and grow.</p>
     </div>
   </section>
 
@@ -66,18 +61,19 @@
     </div>
   </section>
 
-  <section class="principles panel">
-    <div class="panel-inner">
-      <h2 class="panel-title">Principles</h2>
-      <div class="principles-grid">
-        <div class="principle"><h4>Authenticity</h4><p>Real tasks, real proof, real progression.</p></div>
-        <div class="principle"><h4>Merit</h4><p>Rewards are based on difficulty, consistency and community validation.</p></div>
-        <div class="principle"><h4>Community</h4><p>Shared challenges, leaderboards, seasonal events.</p></div>
+  <section id="roadmap" class="panel alt">
+    <div class="panel-inner roadmap">
+      <h2 class="panel-title">Roadmap</h2>
+      <div class="roadmap-timeline">
+        <div class="milestone"><span>Q1 2025</span><p>Alpha launch of Wapp, early user feedback.</p></div>
+        <div class="milestone"><span>Q2 2025</span><p>Tokenomics implementation and staking.</p></div>
+        <div class="milestone"><span>Q3 2025</span><p>Community events, seasonal challenges.</p></div>
+        <div class="milestone"><span>Q4 2025</span><p>Global launch, marketplace and rewards expansion.</p></div>
       </div>
     </div>
   </section>
-</main>
 
+</main>
 <footer class="site-footer">
   <div class="footer-inner">
     <div>© 2025 Winter Arc</div>
@@ -87,7 +83,6 @@
     </div>
   </div>
 </footer>
-
 <script src="assets/js/main.min.js"></script>
 </body>
 </html>
