--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="noise"></div>
   <div class="ghost">COMING SOON</div>
 </div>
+
 <header class="site-header">
   <div class="brand"><div class="badge">$WTR</div><div class="brand-title">Winter Arc</div></div>
   <nav class="nav">
@@ -23,6 +24,7 @@
     <a class="nav-cta" href="prereg.html">Pre-Register</a>
   </nav>
 </header>
+
 <main>
   <section class="hero">
     <div class="hero-inner">
@@ -56,7 +58,7 @@
       <h2 class="panel-title">Vision</h2>
       <div class="vision-content">
         <p class="panel-text">Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.</p>
-        <div class="vision-art"></div>
+        <div class="vision-art interactive"></div>
       </div>
     </div>
   </section>
@@ -74,6 +76,7 @@
   </section>
 
 </main>
+
 <footer class="site-footer">
   <div class="footer-inner">
     <div>© 2025 Winter Arc</div>
