--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <a class="nav-link" href="#roadmap">Roadmap</a>
     <a class="nav-cta" href="prereg.html">Pre-Register</a>
   </nav>
+  <div class="social-fixed">
+    <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
+    <a href="https://x.com/wtr_coin" target="_blank">X</a>
+  </div>
 </header>
 
 <main>
@@ -74,16 +78,11 @@
       </div>
     </div>
   </section>
-
 </main>
 
 <footer class="site-footer">
   <div class="footer-inner">
     <div>© 2025 Winter Arc</div>
-    <div class="links">
-      <a href="https://t.me/wtrcoin" target="_blank">Telegram</a>
-      <a href="https://x.com/wtr_coin" target="_blank">X</a>
-    </div>
   </div>
 </footer>
 <script src="assets/js/main.min.js"></script>
