--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <div class="hero-inner">
       <h1 class="hero-title">Winter Arc</h1>
       <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
-      <div class="hero-actions"><a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a></div>
+      <div class="hero-actions">
+        <a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a>
+      </div>
     </div>
   </section>
 
@@ -74,7 +76,6 @@
       </div>
     </div>
   </section>
-
 </main>
 
 <footer class="site-footer">
@@ -86,6 +87,7 @@
     </div>
   </div>
 </footer>
+
 <script src="assets/js/main.min.js"></script>
 </body>
 </html>
