--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
   </section>
 
   <section id="about" class="panel">
-    <div class="panel-inner animated-block">
+    <div class="panel-inner">
       <h2 class="panel-title">What is Winter Arc?</h2>
       <p class="panel-text">Winter Arc is an activity-driven app where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track profile, timeline, levels, and claim tokens in-app. Challenge yourself, earn, and grow.</p>
     </div>
   </section>
 
   <section id="tokenomics" class="panel alt">
-    <div class="panel-inner tokenomics animated-block">
+    <div class="panel-inner tokenomics">
       <h2 class="panel-title">Tokenomics</h2>
       <div class="tokenomics-grid">
         <div class="stat"><span class="number" data-target="1000000000">0</span><span class="label">Total Supply</span></div>
@@ -56,7 +56,7 @@
   </section>
 
   <section id="vision" class="panel">
-    <div class="panel-inner vision animated-block">
+    <div class="panel-inner vision">
       <h2 class="panel-title">Vision</h2>
       <div class="vision-content">
         <p class="panel-text">Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.</p>
@@ -66,7 +66,7 @@
   </section>
 
   <section id="roadmap" class="panel alt">
-    <div class="panel-inner roadmap animated-block">
+    <div class="panel-inner roadmap">
       <h2 class="panel-title">Roadmap</h2>
       <div class="roadmap-timeline">
         <div class="milestone"><span>Q1 2025</span><p>Alpha launch of Wapp, early user feedback.</p></div>
