--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
   <img class="bg-img" src="assets/images/background.jpeg" alt="background">
   <canvas id="bgCanvas" class="bg-canvas" aria-hidden="true"></canvas>
   <div class="noise"></div>
-  <div class="ghost">COMING SOON</div>
+  <div class="ghost">WTR</div>
 </div>
 
 <header class="site-header">
-  <div class="brand"><div class="badge">$WTR</div><div class="brand-title">Winter Arc</div></div>
+  <div class="brand">
+    <div class="badge">$WTR</div>
+    <div class="brand-title">Winter Arc</div>
+  </div>
   <nav class="nav">
     <a class="nav-link" href="#about">About</a>
     <a class="nav-link" href="#tokenomics">Tokenomics</a>
-    <a class="nav-link" href="#vision">Vision</a>
-    <a class="nav-link" href="#roadmap">Roadmap</a>
     <a class="nav-cta" href="prereg.html">Pre-Register</a>
   </nav>
 </header>
@@ -38,8 +39,8 @@
 
   <section id="about" class="panel">
     <div class="panel-inner">
-      <h2 class="panel-title">What is Winter Arc?</h2>
-      <p class="panel-text">Winter Arc is an activity-driven app where users complete real-world “Arc” tasks — cold exposure, long runs, radical self-challenges — and earn $WTR tokens for verified completion. Track profile, timeline, levels, and claim tokens in-app. Challenge yourself, earn, and grow.</p>
+      <h2 class="panel-title">Coming Soon</h2>
+      <p class="panel-text">Winter Arc is launching soon — prepare for radical challenges, progression, and rewards!</p>
     </div>
   </section>
 
@@ -47,10 +48,22 @@
     <div class="panel-inner tokenomics">
       <h2 class="panel-title">Tokenomics</h2>
       <div class="tokenomics-grid">
-        <div class="stat"><span class="number" data-target="1000000000">0</span><span class="label">Total Supply</span></div>
-        <div class="stat"><span class="number" data-target="70">0</span><span class="label">% Liquidity</span></div>
-        <div class="stat"><span class="number" data-target="20">0</span><span class="label">% Community</span></div>
-        <div class="stat"><span class="number" data-target="10">0</span><span class="label">% Dev Locked</span></div>
+        <div class="stat">
+          <span class="number" data-target="1000000000">0</span>
+          <span class="label">Total Supply</span>
+        </div>
+        <div class="stat">
+          <span class="number" data-target="70">0</span>
+          <span class="label">% Liquidity</span>
+        </div>
+        <div class="stat">
+          <span class="number" data-target="20">0</span>
+          <span class="label">% Community</span>
+        </div>
+        <div class="stat">
+          <span class="number" data-target="10">0</span>
+          <span class="label">% Dev Locked</span>
+        </div>
       </div>
     </div>
   </section>
@@ -60,19 +73,27 @@
       <h2 class="panel-title">Vision</h2>
       <div class="vision-content">
         <p class="panel-text">Winter Arc isn’t just another token. It’s the backbone of a lifestyle app built on radical challenges, rewards and community. Complete Arcs, level up your profile, earn real progression and unlock seasonal drops. $WTR fuels the economy, staking and rewards.</p>
-        <div class="vision-art interactive"></div>
+        <div class="vision-art"></div>
       </div>
     </div>
   </section>
 
-  <section id="roadmap" class="panel alt">
-    <div class="panel-inner roadmap">
-      <h2 class="panel-title">Roadmap</h2>
-      <div class="roadmap-timeline">
-        <div class="milestone"><span>Q1 2025</span><p>Alpha launch of Wapp, early user feedback.</p></div>
-        <div class="milestone"><span>Q2 2025</span><p>Tokenomics implementation and staking.</p></div>
-        <div class="milestone"><span>Q3 2025</span><p>Community events, seasonal challenges.</p></div>
-        <div class="milestone"><span>Q4 2025</span><p>Global launch, marketplace and rewards expansion.</p></div>
+  <section class="principles panel">
+    <div class="panel-inner">
+      <h2 class="panel-title">Principles</h2>
+      <div class="principles-grid">
+        <div class="principle">
+          <h4>Authenticity</h4>
+          <p>Real tasks, real proof, real progression.</p>
+        </div>
+        <div class="principle">
+          <h4>Merit</h4>
+          <p>Rewards are based on difficulty, consistency and community validation.</p>
+        </div>
+        <div class="principle">
+          <h4>Community</h4>
+          <p>Shared challenges, leaderboards, seasonal events.</p>
+        </div>
       </div>
     </div>
   </section>
