--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Winter Arc Token $WTR</title>
-  <link rel="stylesheet" href="style.min.css" />
+  <link rel="stylesheet" href="assets/css/style.min.css" />
 </head>
 <body>
   <header>
@@ -67,6 +67,6 @@
     </div>
   </section>
 
-  <script src="main.min.js"></script>
+  <script src="assets/js/main.min.js"></script>
 </body>
 </html>
