--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <main>
   <section class="hero">
-    <div class="hero-inner">
+    <div class="hero-inner transparent">
       <h1 class="hero-title">Winter Arc</h1>
       <p class="hero-sub">Survive the arc. Earn $WTR. Level up your reality.</p>
       <div class="hero-actions"><a id="ctaPrereg" class="btn-primary btn-full" href="prereg.html">Enter Pre-Registration</a></div>
@@ -67,10 +67,10 @@
     <div class="panel-inner roadmap">
       <h2 class="panel-title">Roadmap</h2>
       <div class="roadmap-timeline">
-        <div class="milestone"><span>Q1 2025</span><p>Alpha launch of Wapp, early user feedback.</p></div>
-        <div class="milestone"><span>Q2 2025</span><p>Tokenomics implementation and staking.</p></div>
-        <div class="milestone"><span>Q3 2025</span><p>Community events, seasonal challenges.</p></div>
         <div class="milestone"><span>Q4 2025</span><p>Global launch, marketplace and rewards expansion.</p></div>
+        <div class="milestone"><span>Q1 2026</span><p>Seasonal challenges and community events.</p></div>
+        <div class="milestone"><span>Q2 2026</span><p>Mobile app feature expansion and staking improvements.</p></div>
+        <div class="milestone"><span>Q3 2026</span><p>Full ecosystem growth, partnerships, and marketplace optimization.</p></div>
       </div>
     </div>
   </section>
